--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
     "autoprefixer": "latest",
     "postcss": "latest",
