--- a/assets/package.json
+++ b/assets/package.json
@@ -13,9 +13,13 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "latest",
     "postcss": "latest",
     "tailwindcss": "latest",
+    "typescript": "^5.6.3",
     "vite": "latest"
   }
 }
